[TEST]:sent function from parent to child

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div>
+<div class="mainContainer">
   <h1>Demo Angular</h1>
   <p>Branch develop</p>
+  
+  <app-button [text]="'Done'" [onClickFunction]="onShow"></app-button>
 </div>
