--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,8 @@
-<button type="button" (click)="onClick()">
+<button
+    mat-raised-button
+    [color]="isColor"
+    [style]="isStyle"
+    type="button" 
+    (click)="onClick()">
     {{text}}
 </button>
